# src/app/routers/product.js
@@ -1,0 +1,12 @@
+import { Router } from 'express';
+import ProductController from '../controllers/ProductController';
+
+const routes = new Router();
+
+routes.get('/products', ProductController.index);
+routes.get('/products/:id', ProductController.show);
+routes.post('/products', ProductController.store);
+routes.put('/products/:id', ProductController.update);
+routes.delete('/products/:id', ProductController.delete);
+
+export default routes;
