# src/swagger-documention.json
@@ -2,10 +2,9 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "Doc minha API",
-    "description": "Minha descrição"
+    "title": "Documentação da API de controle de estoque",
+    "description": "API para controle de estoque desenvolvida em JavaScript"
   },
-  "host": "localhost:8080",
   "basePath": "/",
   "tags": [],
   "schemes": [
@@ -26,7 +25,7 @@
     "application/json"
   ],
   "paths": {
-    "/user": {
+    "/products": {
       "get": {
         "tags": [],
         "description": "",
@@ -34,52 +33,13 @@
         "responses": {}
       },
       "post": {
-        "tags": [
-          "users"
-        ],
-        "description": "Route store user",
-        "parameters": [
-          {
-            "name": "email",
-            "in": "body",
-            "description": "E-mail do usuário",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "nome",
-            "in": "body",
-            "description": "Nome do usuário",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "password",
-            "in": "body",
-            "description": "Senha do usuário com máximo de X caracter",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "User successfully obtained.",
-            "schema": {
-              "$ref": "#/definitions/user"
-            }
-          },
-          "400": {
-            "description": "Bad Request"
-          }
-        },
-        "security": [
-          {
-            "Bearer": []
-          }
-        ]
+        "tags": [],
+        "description": "",
+        "parameters": [],
+        "responses": {}
       }
     },
-    "/user/{id}": {
+    "/products/{id}": {
       "get": {
         "tags": [],
         "description": "",
@@ -120,7 +80,19 @@
         "responses": {}
       }
     },
-    "/login": {
+    "/categories": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {}
+      },
       "post": {
         "tags": [],
         "description": "",
@@ -131,11 +103,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "email": {
-                  "type": "string",
-                  "example": "any"
-                },
-                "password": {
+                "name": {
                   "type": "string",
                   "example": "any"
                 }
@@ -144,27 +112,100 @@
           }
         ],
         "responses": {
-          "401": {
-            "description": "Unauthorized"
+          "400": {
+            "description": "Bad Request"
           }
         }
       }
     },
-    "/product": {
+    "/categories/{id}": {
       "get": {
         "tags": [],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
-          "401": {
-            "description": "Unauthorized"
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string",
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
     }
   },
   "definitions": {
-    "user": {
+    "category": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "example": "ID"
+        },
+        "name": {
+          "type": "string",
+          "example": "Nome"
+        }
+      }
+    },
+    "product": {
       "type": "object",
       "properties": {
         "id": {
@@ -175,13 +216,21 @@
           "type": "string",
           "example": "Nome"
         },
-        "email": {
+        "description": {
           "type": "string",
-          "example": "E-mail"
+          "example": "Descrição"
         },
-        "password_hash": {
+        "price": {
           "type": "string",
-          "example": "Senha"
+          "example": "Preço"
+        },
+        "status": {
+          "type": "string",
+          "example": "Status"
+        },
+        "category_id": {
+          "type": "string",
+          "example": "ID da categoria"
         }
       }
     }
